--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
-                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere et sunt vero, iste ea quos repellat vel delectus. Voluptates molestiae soluta facere nulla debitis sequi est labore natus, harum expedita?</p>
+                    <p class="texto">Charizard é um pokemon dos tipos fogo e voador. Sua aparencia é como a de um dragão, e a chama em sua cauda aumenta de tamanho e temperatura de acordo com seu humor, quando irritado, as mesmas ficam azuis.</p>
                 </div>
             </li>
 
